k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
spec:
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
      - name: client-app
        image: rifqio/client-dev-practice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-app
  ports:
  - port: 3000
    targetPort: 3000
