k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: rifqio/comment-practice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-srv
spec:
  selector:
    app: comment-service
  type: ClusterIP
  ports:
  - port: 4001
    targetPort: 4001
    name: comment-cluster

---
apiVersion: v1
kind: Service
metadata:
  name: comment-nodeport-srv
spec:
  type: NodePort
  selector:
    app: comment-service
  ports:
  - port: 4001
    targetPort: 4001
    name: comment-nodeport
