k8s/comment-moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-moderation-service
spec:
  selector:
    matchLabels:
      app: comment-moderation-service
  template:
    metadata:
      labels:
        app: comment-moderation-service
    spec:
      containers:
      - name: comment-moderation-service
        image: rifqio/comment-moderation-practice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: comment-moderation-cluster-srv
spec:
  selector:
    app: comment-moderation-service
  type: ClusterIP
  ports:
  - port: 4003
    targetPort: 4003
    name: comment-moderation-cluster
